deployment/k8s-componentes-entrega-3.yaml
###################################
# users
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/terminus-grupo25/docker-terminus25/users:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-users
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31020
---
###################################
# verificacion
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verificacion
  labels:
    app: verificacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verificacion
  template:
    metadata:
      labels:
        app: verificacion
    spec:
      containers:
        - name: verificacion
          image: us-central1-docker.pkg.dev/terminus-grupo25/docker-terminus25/verificacion:1.0
          ports:
            - containerPort: 3011
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-verificacion
  annotations:
    cloud.google.com/backend-config: '{"default": "verificacion-config"}'
spec:
  type: NodePort
  selector:
    app: verificacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3011
      nodePort: 31033
---
