deployment/k8s-new-services-deployment.yaml
###################################
# publicnew
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publicnew
  labels:
    app: publicnew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publicnew
  template:
    metadata:
      labels:
        app: publicnew
    spec:
      containers:
        - name: publicnew
          image: us-central1-docker.pkg.dev/terminus-grupo25/docker-terminus25/public-new:1.0
          ports:
            - containerPort: 3010
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-publicnew
  annotations:
    cloud.google.com/backend-config: '{"default": "publicnew-config"}'
spec:
  type: NodePort
  selector:
    app: publicnew
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
      nodePort: 31030
---
